# tmmoscow-bot

./: .editorconfig  .env.dist  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
backend/: pyproject.toml
backend/src/tmmoscow_api/: api.py  const.py  enums.py  types.py
bot/: __main__.py  const.py  errors.py  settings.py
bot/database/: context.py  create_pool.py
bot/database/models/: __init__.py  base.py  competition.py  competitions.py  content.py  file.py  files.py  subscription.py  user.py
bot/database/repositories/: base.py  general.py  users.py
bot/enums/: locale.py
bot/handlers/: admin.py  user.py
bot/keyboards/: base.py  inline.py
bot/middlewares/: __init__.py  database.py  i18n.py  user.py
bot/utils/: __init__.py  distance_type.py  loggers.py  path_control.py
migrations/: _get_next_revision_id.py  env.py
migrations/versions/: 001_create_table.py  002_add_distance_type_column.py  003_add_tables_to_store_competition_.py  004_add_position_column_to_stote_order_of_.py  005_make_views_column_nullable.py  006_make_author_column_nullable.py  007_add_subscriptions_table.py
scripts/: docker-entrypoint.sh
tmmoscow_api/: __init__.py  api.py  const.py  consts.py  enums.py  types.py  utils.py
tmmoscow_api/models/base/: __init__.py  model.py
translations/ru/: messages.ftl
