[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmmoscow-api"
version = "0.1.0"
description = " tmmoscow.ru"
license ="LGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "ZUB3C", email = "pitzubarev@yandex.ru" },
]
dependencies = [
    "aiohttp>=3.9.5",
    "selectolax>=0.3.21",
    "yarl>=1.9.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tmmoscow_api"]

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["tmmoscow_api"]
